--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^9.2.11"
+    "inquirer": "^8.2.4"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.5.0"
   }
 }
